# dumb-function-count

./: Makefile  README.md  build.dumb  count.c  count.cpp  count.hpp  dumb  fentry.cpp  fib.cpp  makefile  meson.build  readme  readme.md  runner
